# gptrace-artifacts

./: .gitattributes  .gitignore  .gitmodules  CRASHWALK_EVALUATION.md  DEFAULT_EVALUATION.md  GENERATE_DATA_SOURCES.md  GPTRACE_EVALUATION.md  README.md
default/: README.md  pyproject.toml
default/intel_pin/: bbl_tracing.cpp  makefile.rules
default/src/default/: __init__.py  default.py  ground_truth_analysis.py
reproduce/generate_data_sources/: aflplusplus_asan.patch  modified_structure.patch
reproduce/generate_data_sources/docker/: .dockerignore  Dockerfile.Common  Dockerfile.Magma  Dockerfile.MoonLight  crashwalk_gta.py  rename.py  run.sh  run_crashwalk.sh  run_crashwalk_provided.sh  run_default.sh  run_pin.sh
reproduce/generate_data_sources/targets/freetype__char2svg/: dependencies  env_variables.sh
reproduce/generate_data_sources/targets/libtiff__tiff2pdf/: dependencies  env_variables.sh
reproduce/generate_data_sources/targets/libtiff__tiffcp/: env_variables.sh
reproduce/generate_data_sources/targets/libxml2__libxml2_xml_read_memory_fuzzer/: env_variables.sh
reproduce/generate_data_sources/targets/libxml2__xmllint/: dependencies  env_variables.sh
reproduce/generate_data_sources/targets/openssl__client/: env_variables.sh
scripts/: all.sh  get_data_sources.sh  reproduce_eval.sh
scripts/crashwalk_evaluation/: run.sh  run_provided.sh
scripts/default_evaluation/: run.sh
scripts/generate_data_sources/: build.sh  get_inputs.sh  get_targets.sh  run.sh
scripts/gptrace_evaluation/: run.sh
(+11 files in other folders)
